--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Babel==1.3
 argparse==1.2.1
 iso8601==0.1.10
+mock==1.0.1
 msgpack-python==0.4.6
 netaddr==0.7.14
 netifaces==0.10.4
+nose==1.3.6
 oslo.config==1.11.0
 oslo.i18n==1.6.0
 oslo.serialization==1.5.0
@@ -12,6 +14,7 @@ pbr==0.11.0
 prettytable==0.7.2
 python-cinderclient==1.2.1
 python-keystoneclient==1.4.0
+python-novaclient==2.25.0
 pytz==2015.4
 requests==2.7.0
 simplejson==3.6.5
